<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
            android:id="@+id/etMedName"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp"
            android:ems="10"
            android:hint="@string/medication_name"
            android:inputType="text" />

    <EditText
        android:id="@+id/etFrequency_weekly"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/etMedName"
        android:layout_below="@+id/etMedName"
        android:layout_marginTop="23dp"
        android:layout_toStartOf="@+id/etUnits"
        android:ems="10"
        android:hint="@string/frequency"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etDosage"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/etFrequency_weekly"
            android:layout_below="@+id/etFrequency_weekly"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/dosage"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etUnits"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/etDosage"
            android:layout_alignBottom="@+id/etDosage"
            android:layout_alignEnd="@+id/etMedName"
            android:layout_marginEnd="23dp"
            android:ems="10"
            android:hint="@string/units"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/etEndDate"
            android:layout_alignBottom="@+id/etEndDate"
            android:layout_alignStart="@+id/etDosage"
            android:ems="10"
            android:hint="@string/start_date"
            android:inputType="date"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/etUnits"
            android:layout_below="@+id/etUnits"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/end_date"
            android:inputType="date"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignEnd="@+id/etMedName"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerInParent="false"
            android:text="@string/addButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_medicine"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etStartDate"
        android:layout_below="@+id/etStartDate"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/enter_Time"
        android:inputType="time" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/etMedName"
        android:text="@string/clear" />

    <EditText
        android:id="@+id/etFrequency_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etFrequency_weekly"
        android:layout_toEndOf="@+id/etTime"
        android:ems="10"
        android:hint="@string/dayFrequency"
        android:inputType="textPersonName" />


</RelativeLayout>